--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 # INSTALL
 
-[x] Build GMP library (configure build with --enable-cxx) (https://gmplib.org/gmp-man-6.2.1.pdf)
+[x] Build (enclave modified) GMP library (https://github.com/intel/sgx-gmp)
+Note: make check doesn't pass - ostensibly bc of sgx defined types
 
 In this order (Intel_SGX_Installation_Guide_Linux_2.13_Open_Source)
 [x] Build SGX Pre-Reqs
@@ -10,14 +11,16 @@ Note: may need to (re)execute /home/jess/sgxsdk/enviornment for correct env vars
 [x] Build SGX PSW
 [x] Build SGX SDK 
 Note: mitigation tools?
+Reference: https://download.01.org/intel-sgx/sgx-linux/2.13/docs/Intel_SGX_Installation_Guide_Linux_2.13_Open_Source.pdf
 
 [x] set appropriate directories in Makefile
-[ ] set debug mode, etc, in Makefile
 
 
 # RUN
 
-make (hw, debug, etc parameters)
+Note: may need to (re)execute /home/jess/sgxsdk/enviornment for correct env vars after reinitializing
+
+make
 
 
 # DOCUMENTATION
