--- a/README
+++ b/README
@@ -1,4 +1,46 @@
-# INSTALL
+# INSTALL LOCAL
+
+- Use Linux/Linux VM, see PreReqs here: https://github.com/intel/linux-sgx#install-the-intelr-sgx-sdk
+
+(Do not follow the rest of these install instructions!)
+	
+- Get SDK Installer (note: driver not needed)
+```
+wget https://download.01.org/intel-sgx/sgx-linux/2.13/distro/ubuntu20.04-server/sgx_linux_x64_sdk_2.13.100.4.bin
+chmod a+x sgx_linux_x64_sdk_2.13.100.4.bin
+./sgx_linux_x64_sdk_2.13.100.4.bin
+
+```
+
+- Source environment variables according to instructions
+
+- Get modified SGX GMP
+```
+mkdir sgxgmp_build
+git clone https://github.com/intel/sgx-gmp.git
+cd sgx-gmp
+./configure --enable-cxx --enable-sgx --enable-static --disable-shared --enable-assembly --prefix=../sgxgmp_build
+make
+make install
+```
+
+- Clone SGX-LR
+- Change SGX-LR Makefile to reflect correct SDK and GMP build directories (should be correct already)
+
+```
+make
+./sgx_lr_exec
+```
+
+
+
+
+
+
+
+
+
+# INSTALL NOTES FOR BIG MACHINE
 
 [x] Build (enclave modified) GMP library (https://github.com/intel/sgx-gmp)
 Note: make check doesn't pass - ostensibly bc of sgx defined types
